--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "prettier": "^3.3.3",
+        "prettier-plugin-blade": "^2.1.18",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0.11"
