--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "apexcharts": "^3.53.0",
-        "mini-svg-data-uri": "^1.4.4"
+        "mini-svg-data-uri": "^1.4.4",
+        "swiper": "^11.2.4"
     }
 }
