--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
     "plugins": ["prettier-plugin-blade"],
-    "semi": true,
-    "singleQuote": false,
     "trailingComma": "none",
-    "tabWidth": 2
+    "semi": false,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 4
 }
