#ag-94 api testing + documentation

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/fortify": "^1.25",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-permission": "^6.12"
+        "spatie/laravel-permission": "^6.12",
+        "ext-curl": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
