--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/fortify": "^1.25",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-discord-alerts": "^1.8",
         "spatie/laravel-google-calendar": "^3.8",
         "spatie/laravel-pdf": "^1.5",
         "spatie/laravel-permission": "^6.12"
