add configuration for Weeztix and Google Calendar integration

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,14 @@ VITE_APP_NAME="${APP_NAME}"
 
 DISCORD_BOT_NAME="SVConcat Bot"
 DISCORD_WEBHOOK_ANNOUNCEMENTS=
+
+# weeztix
+WEEZTIX_ENABLED=false
+OAUTH_CLIENT_ID=
+OAUTH_CLIENT_SECRET=
+OAUTH_CLIENT_REDIRECT='http://127.0.0.1:8000/admin/weeztix/callback'
+
+# google calendar
+GOOGLE_CALENDAR_ENABLED=false
+GOOGLE_CALENDAR_ID=
+
